# Django-Template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
.github/workflows/: checks_workflow.yml
config/apps/users/: admin.py
config/apps/users/api/root/: urls.py  views.py
config/apps/users/management/commands/: createadminuser.py
config/apps/users/migrations/: 0001_initial.py  0002_remove_user_is_super_admin_adminuser.py  0003_adminuser_username.py  0004_alter_adminuser_username.py
config/apps/users/models/: __init__.py  admin.py  base_user_manager.py  user.py
config/config/: settings.py  urls.py
config/config/integrations/: debug_toolbar.py
